# file-manager

./: .clang-format  .gitignore  CMakeLists.txt  README.md
resources/: resources.qrc
src/: main.cpp
src/config/: AppConfig.hpp
src/core/: AppManager.cpp  AppManager.hpp  File-core.cpp  Filesystem.cpp  Filesystem.hpp  test_main.cpp
src/ui/: MainWindow.cpp  MainWindow.hpp
src/ui/components/: FileView.cpp  FileView.hpp
src/window/: MainWindow.cpp  MainWindow.hpp
